--- a/OurCorpses/index.html
+++ b/OurCorpses/index.html
@@ -10,5 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <audio src="audio/keeper_strix.mp3">
+    </audio>
+    <div id="content">
+    </div>
+  </body>
 </html>
