--- a/Ecdysis/index.html
+++ b/Ecdysis/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <audio src="audio/keeper_strix.mp3">
+    <audio src="audio/keeper_strix.mp3" preload>
     </audio>
     <div id="content">
     </div>
