Trying to add aac for Safari

--- a/Ecdysis/index.html
+++ b/Ecdysis/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <audio src="audio/keeper_strix.mp3" preload>
+    <audio preload>
+      <source src="audio/ecdysis.m4a" type="audio/aac">
+      <source src="audio/ecdysis.mp3" type="audio/mp3">
     </audio>
     <div id="content">
     </div>
