Spiral turbulence and moving points

--- a/Spirit/index.html
+++ b/Spirit/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
+    <title>spirit</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script language="javascript" src="spirit-audio.js"></script>
+    <script language="javascript" src="spirit-grow.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
