--- a/Spirit/index.html
+++ b/Spirit/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>spirit</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script language="javascript" src="spirit-grow.js"></script>
+    <script language="javascript" src="spirit-grow-proper.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
