Better spiral development, better spiral noise

--- a/Spirit/index.html
+++ b/Spirit/index.html
@@ -3,6 +3,7 @@
     <title>spirit</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script language="javascript" src="DotAudio.js"></script>
+    <script language="javascript" src="SpiralAudio.js"></script>
     <script language="javascript" src="spirit-grow-proper.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
