--- a/Snow/snow.html
+++ b/Snow/snow.html
@@ -4,7 +4,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script language="javascript" src="snow.js"></script>
   </head>
-  <body>
-    <canvas width="500" height="500"></canvas>
-  </body>
+  <body></body>
 </html>
